--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,6 +4,7 @@ version '1.0.3'
 buildscript {
     ext.kotlin_version = '1.6.10'
     repositories {
+        google()
         mavenCentral()
     }
 
@@ -15,6 +16,7 @@ buildscript {
 
 rootProject.allprojects {
     repositories {
+        google()
         mavenCentral()
     }
 }
